--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -2,7 +2,7 @@ header .wrapper {
     height: 60vh;   
     
     .title {
-        padding: 50px;
+        padding: 5vw;
     }
     .headerImg{
         position: absolute;
